--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,10 @@ add_executable(Tutorial tutorial.cxx)
 
 configure_file(TutorialConfig.h.in TutorialConfig.h)
 
+# specify the C++ standard
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
 
 target_include_directories(Tutorial PUBLIC
                            "${PROJECT_BINARY_DIR}"
