--- a/src/TutorialConfig.h.in
+++ b/src/TutorialConfig.h.in
@@ -1,3 +1,5 @@
 //the configured options and setting for Tutorial
 #define Tutorial_VERSION_MAJOR @Tutorial_VERSION_MAJOR@
 #define Tutorial_VERSION_MINOR @Tutorial_VERSION_MINOR@
+
+#cmakedefine USE_MYMATH
